[tool.poetry]
name = "python-mongodb"
version = "0.1.0"
description = ""
authors = ["Emilio Moreno <emilio@touchof.tech>"]
readme = "README.md"
packages = [{include = "python_mongodb"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
